--- a/project.miniapp.json
+++ b/project.miniapp.json
@@ -65,6 +65,16 @@
     },
     "infoPlist": {
       "DisableAppUsesNonExemptEncryption": true
+    },
+    "privateDescriptions": {
+      "NSCalendarsUsageDescription": "为了提供完整的功能，我们的应用程序需要访问日历。这将用于提醒和日程管理。我们承诺保护用户隐私和数据安全。",
+      "NSPhotoLibraryUsageDescription": "为了提供完整的功能，我们的应用程序需要读取相册。这将用于发表富文本内容。我们承诺保护用户隐私和数据安全。",
+      "NSBluetoothPeripheralUsageDescription": "为了提供完整的功能，我们的应用程序需要访问蓝牙外设。这将用手与其他设备进行通信和数据交换。我们承诺保护用户隐私和数据安全。",
+      "NSMicrophoneUsageDescription": "为了提供完整的功能，我们的应用程序需要访问麦克风。这将用于录制音频和进行语音交互。我们承诺保护用户隐私和数据安全。",
+      "NSCameraUsageDescription": "为了提供完整的功能，我们的应用程序需要使用摄像头。这将用于拍摄照片发表富文本内容。我们承诺保护用户隐私和数据安全。",
+      "NSLocationWhenInUseUsageDescription": "为了提供完整的功能，我们的应用程序需要访问位置信息。这将用于提供定位服务和相关功能。我们承诺保护用户隐私和数据安全。",
+      "NSLocationAlwaysAndWhenInUseUsageDescription": "为了提供完整的功能，我们的应用程序需要在使用时访问位置信息。这将用于提供定位服务和相关功能。我们承诺保护用户隐私和数据安全。",
+      "NSBluetoothAlwaysUsageDescription": "为了提供完整的功能，我们的应用程序需要始终访问蓝牙外设。这将用于与其他设备进行通信和数据交换。我们承诺保护用户隐私和数据安全。"
     }
   },
   "versionCode": 100
