chore: miniapp configs

--- a/app.json
+++ b/app.json
@@ -72,5 +72,8 @@
   "themeLocation": "theme.json",
   "requiredPrivateInfos": [
     "chooseLocation"
-  ]
+  ],
+  "miniApp": {
+    "useAuthorizePage": true
+  }
 }
